src/assets/examples/ripple-overview/ripple-overview.component.css
.example-ripple-container {
  cursor: pointer;
  margin: 0 auto;

  width: 300px;
  height: 300px;
  line-height: 300px;

  color: #7f5eba;

  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;

  -webkit-user-drag: none;
  -webkit-tap-highlight-color: transparent;
}

/** Styles to make the demo look better. */
.example-ripple-checkbox {
  margin: 6px 24px 6px 0;
}

.example-ripple-form-field {
  margin: 0 24px 0 0;
}

.example-controller {
  text-align: left;
  width: 420px;
  padding-left: 40px;
  white-space: normal;
}

